--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -3,16 +3,25 @@
   auth: "Peitong Duan, Jeremy Warner, Yang Li, Björn Hartmann"
   conf: ACM Conference on Human Factors in Computing Systems
   info: https://dl.acm.org/doi/10.1145/3613904.3642782
-  image: llm-feedback.png
+  image: image.png  # Assumes assets/img prefix 
   paper: https://dl.acm.org/doi/pdf/10.1145/3613904.3642782
   cack: CHI
   year: 2024
   note:
   home: 1 # Specify this is you want it on the home page, otherwise hidden
+- name: "VST: Interactive Flexible Style Transfer for Vector Graphics"
+  auth: "Jeremy Warner, Kyu Won Kim, Björn Hartmann"
+  conf: ACM Symposium on User Interface Software and Technology
+  info: ./vst # relative links
+  image: VST_teaser.jpg
+  paper: assets/pdf/example.pdf
+  cack: UIST
+  year: 2023
+  home: 1
 - name: "REACH2-Mote: Range Extending Passive Wake-up Wireless Sensor Nodes"
   auth: Li Chen, J. Warner, P. Yung, D. Zhou, W. Heinzelman, I. Demirkol, U. Muncuk, K. Chowdhury, S. Basagni
-  paper: /papers/reach-mote-2.pdf
-  image: reach2-mote.jpg
+  paper: assets/pdf/example.pdf
+  image: image.png
   info: https://dl.acm.org/doi/10.1145/2829954
   conf: ACM Transactions on Sensor Networks
   cack: TOSN
