--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,16 +1,17 @@
-- name: "Generating Automatic Feedback on UI Mockups with Large Language Models"
-  sname: "Generating Automatic Feedback on UI Mockups with LLMs"
-  auth: "Peitong Duan, Jeremy Warner, Yang Li, Björn Hartmann"
+- name: "Longer Full Name used inside of paper page"
+  sname: "example paper (external)" # short name used in the list
+  auth: "authors1, authors2"
   conf: ACM Conference on Human Factors in Computing Systems
-  info: https://dl.acm.org/doi/10.1145/3613904.3642782
   image: image.png # Assumes assets/img prefix
-  paper: https://dl.acm.org/doi/pdf/10.1145/3613904.3642782
-  cack: CHI
-  year: 2024
-  note:
+  info: https://dl.acm.org/doi/10.1145/3613904.3642782 # project homepage link
+  paper: https://dl.acm.org/doi/pdf/10.1145/3613904.3642782 # paper pdf link
+  cack: CHI # conference acronym
+  year: 2024 
+  note: example note # can use this to specify awards for the paper
   home: 1 # Specify this is you want it on the home page, otherwise hidden
 
 - name: "VST: Interactive Flexible Style Transfer for Vector Graphics"
+  sname: "example paper (internal)"
   auth: "Jeremy Warner, Kyu Won Kim, Björn Hartmann"
   conf: ACM Symposium on User Interface Software and Technology
   info: ./vst # relative links
@@ -27,4 +28,4 @@
   info: https://dl.acm.org/doi/10.1145/2829954
   conf: ACM Transactions on Sensor Networks
   cack: TOSN
-  year: 2015
+  year: 2015 # This won't show up on the home page, no home: 1
