--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -1,8 +1,8 @@
-- name: Company1 · Research Scientist
-  date: 2023—
+- name: Sensoriis · Research Electrical Engineer Intern
+  date: 2021—2022
   about: "My team develops and deploys machine learning model optimization and analysis techniques, enabling the launch of Apple Intelligence (on-device LLMs) and the Vision Pro (<a href='https://machinelearning.apple.com/research/introducing-apple-foundation-models'>research post: optimization</a>)."
-  link: https://machinelearning.apple.com/research/
-- name: Company2 · Research Scientist
-  date: 2021-2023
+  link: https://sensoriis.com/
+- name: ACIST Medical Systems · R&D Engineer Intern
+  date: 2019-2020
   about: "work description"
-  link: https://machinelearning.apple.com/research/
+  link: https://acist.com/
